--- a/platform-mobile-client/pom.xml
+++ b/platform-mobile-client/pom.xml
@@ -51,7 +51,8 @@
                 <dubbo.application.name>platform-mobile-client</dubbo.application.name>
                 <dubbo.application.owner>zhangxudong</dubbo.application.owner>
                 <dubbo.registry.protocol>zookeeper</dubbo.registry.protocol>
-                <dubbo.registry.address>127.0.0.1:2181,127.0.0.1:2182,127.0.0.1:2183</dubbo.registry.address>
+                <!--<dubbo.registry.address>127.0.0.1:2181,127.0.0.1:2182,127.0.0.1:2183</dubbo.registry.address>-->
+                <dubbo.registry.address>127.0.0.1:2181</dubbo.registry.address>
                 <dubbo.registry.client>curator</dubbo.registry.client>
                 <dubbo.registry.file>/data/zookeeper/client_mobile.cache</dubbo.registry.file>
                 <dubbo.application.logger>slf4j</dubbo.application.logger>
@@ -72,7 +73,8 @@
                 <dubbo.application.name>platform-mobile-client</dubbo.application.name>
                 <dubbo.application.owner>zhangxudong</dubbo.application.owner>
                 <dubbo.registry.protocol>zookeeper</dubbo.registry.protocol>
-                <dubbo.registry.address>127.0.0.1:2181,127.0.0.1:2182,127.0.0.1:2183</dubbo.registry.address>
+                <!--<dubbo.registry.address>127.0.0.1:2181,127.0.0.1:2182,127.0.0.1:2183</dubbo.registry.address>-->
+                <dubbo.registry.address>127.0.0.1:2181</dubbo.registry.address>
                 <dubbo.registry.client>curator</dubbo.registry.client>
                 <dubbo.registry.file>/data/zookeeper/client_mobile.cache</dubbo.registry.file>
                 <dubbo.application.logger>slf4j</dubbo.application.logger>
