--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,8 @@
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <dubbo.version>2.8.4</dubbo.version>
+        <!--<dubbo.version>2.8.4</dubbo.version>-->
+        <dubbo.version>2.5.4-ext</dubbo.version>
         <curator-framework.version>1.3.3</curator-framework.version>
         <zookeeper.version>3.4.8</zookeeper.version>
         <zkclient.version>0.1</zkclient.version>
@@ -87,6 +88,18 @@
                 <groupId>com.alibaba</groupId>
                 <artifactId>dubbo</artifactId>
                 <version>${dubbo.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.springframework</groupId>
+                        <artifactId>spring</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <!-- dubbo启动报java.lang.ClassNotFoundException: javassist.ClassPool -->
+            <dependency>
+                <groupId>org.javassist</groupId>
+                <artifactId>javassist</artifactId>
+                <version>3.20.0-GA</version>
             </dependency>
 
             <!-- zookeeper start -->
