--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
         <commons-codec.version>1.10</commons-codec.version>
         <commons-fileupload.version>1.3.1</commons-fileupload.version>
         <guava.version>19.0</guava.version>
+        <!--<guava.version>20.0</guava.version>-->
         <springfox.version>2.5.0</springfox.version>
         <fastjson.version>1.2.10</fastjson.version>
         <okhttp.version>3.4.1</okhttp.version>
